src/styles/base.css
/* ... */
.bg-w-100 { /* Full-width background color, goes beyond gutter */
    margin: 0 calc(var(--bs-gutter-x) * -.5);
    padding: 0 calc(var(--bs-gutter-x) * .5);
}

.bg-brand-scale-green-1 {
    background: var(--brand-scale-green-1);
}

.border-100 { /* Full-width border, goes beyond gutter */
    margin: 0 calc(var(--bs-gutter-x) * -.5);
    padding: 0;
}

.border-half {
    --bs-border-width: 0.5px;
}

.border-black {
    --bs-border-color: #000;
}

.fs-7 { /* Font size smaller than 1rem */
    font-size: calc(14rem / 16) !important;
}

.fs-8 {
    font-size: calc(12rem / 16) !important;
    letter-spacing: 1.2px !important;
}

.fine-print { /* Font size smaller than 1rem */
    font-size: calc(12rem / 16) !important;
}

.fw-500 {
    font-weight: 500;
}

.fw-boldest {
    font-weight: 800;
}

.list-circle {
    background: url(/assets/illustrations/circle.svg) no-repeat left center;
    padding: 0.5rem 0 0.5rem 2.4rem;
    list-style: none;
    margin: 0;
}

@media screen and (min-width: 992px) {
  .min-h-35 {
    min-height: 35%;
  }

  .min-h-40 {
    min-height: 40%;
  }

  .w-md-50 {
    width: 50% !important;
  }
}

/* About */

@-webkit-keyframes move-left
{
    27.27%, 45.45% {
        right: 60%;
    }
    63.63%, 100% {
        right: calc(100vw + 62px);
    }
}
@keyframes move-left
{
    27.27%, 45.45% {
        right: 60%;
    }
    63.63%, 100% {
        right: calc(100vw + 62px);
    }
}

.animate-bus {
    right: -62px;
    bottom: calc(-1 * var(--main-container-first-row-vertical-margin));
    position: absolute;
    -webkit-animation: move-left 22s linear infinite;
    animation: move-left 22s linear infinite;
}

.animate-bus img,
.animate-bike img {
    -webkit-transition: all 1s linear;
    -moz-transition: all 1s linear;
    -o-transition: all 1s linear;
    -ms-transition: all 1s linear;
    transition: all 1s linear;
    transition-duration: 1s;
}

@-webkit-keyframes move-right
{
    0% {
        left: -8%;
    }
    80% {
        left: 100%;
    }
    100% {
        left: 120%;
    }
}

@keyframes move-right
{
    0% {
        left: -8%;
    }
    80% {
        left: 100%;
    }
    100% {
        left: 120%;
    }
}

.animate-bike {
    left: 100%;
    bottom: 0;
    position: absolute;
    -webkit-animation: move-right 24s linear infinite,
    delay-animation 8s linear infinite;
    animation: move-right 24s linear infinite,
    delay-animation 8s linear infinite;
    animation-delay: 3s;
    -webkit-animation-delay: 3s;
}

@media (prefers-reduced-motion: reduce) {
    .animate-bus,
    .animate-bike {
      animation: none;
    }

    .animate-bus {
        right: 0 !important;
    }

    .animate-bike {
        left: 0 !important;
    }
}

/* Blog */

@media (max-width: 992px) {
    .blog.row {
        --bs-gutter-x: 0;
    }
}

.post-preview {
    margin-top: calc(80rem / 16);
}

.post-preview:first-of-type {
    margin-top: calc(48rem / 16);
}

@media (min-width: 992px) {
    .post-preview,
    .post-preview:first-of-type {
        margin-top: calc(10rem / 16)x;
    }
}

.post-title:hover,
.post-title:focus {
    text-decoration: none !important;
}

.back-row {
    padding-top: 0.5rem;
    padding-bottom: calc(12rem / 16);
    letter-spacing: 1.2px;
}

.back-row a:before {
    content: " ";
    margin-right: 0.5rem;
    vertical-align: sub;
    display: inline-block;
    width: 0.5rem;
    height: calc(12rem / 16);
}

.back-row a:before {
    background: no-repeat url("/assets/blog/go-back.svg");
    background-size: contain;
}

.back-row:last-of-type a:before {
    background: var(--brand-primary-green);
    mask-image: url("/assets/blog/go-back.svg"), linear-gradient(transparent, transparent);
    mask-position: center center;
    -webkit-mask-image: url("/assets/blog/go-back.svg"), linear-gradient(transparent, transparent);
    -webkit-mask-position: center center;
}

@media (max-width: 992px) {
    :root {
        --blog-post-h2-padding-top: 3.5rem;
    }
    .blog_post .blog_wrapper {
        padding-bottom: calc(56rem / 16) !important;
    }
}

@media (min-width: 992px) {
    :root {
        --blog-post-h2-padding-top: 6rem;
    }
    .blog_post .blog_wrapper {
        padding-bottom: calc(120rem / 16) !important;
    }
}

.blog_post h2 {
    padding: var(--blog-post-h2-padding-top) 0 2rem 0;
}

.blog_post p + h2,
.blog_wrapper p:first-child:not(li > p) {
    padding-top: 56px;
}

.blog_post h3 {
    font-family: var(--bs-font-monospace);
    font-size: 1rem;
    font-style: normal;
    font-weight: 700;
    line-height: var(--xs-line-height)
}

.blog_post h5 {
    font-family: var(--bs-font-sans-serif);
    font-size: 0.875rem;
    font-weight: 500;
    color: var(--brand-scale-gray-4);
    margin: -1.5rem 0 1.5rem 0;
    line-height: 1;
}

.blog_post p:not(:last-child) {
    margin-bottom: 1.5rem;
}

.blog_post p:last-child {
    margin-bottom: 0;
}

.blog_post .language-plaintext code {
    font-weight: 700;
    margin: 2.5rem 0;
}

.blog_post img {
    max-width: 100%;
    max-height: 100%;
}

.blog_post figcaption {
    font-size: calc(14rem / 16);
    font-weight: 500;
    line-height: 150%;
    color: var(--brand-scale-gray-4);
    margin-bottom: 1.5rem;
}

.blog_post table {
    margin: 0 1.5rem;
}

.blog_post table td,
.blog_post table th {
    padding: 0.75rem;
    display: table-cell;
}

/* Our Work */

.sign {
    position: absolute;
    right: 0;
    bottom: 0;
}

